--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,18 +2,17 @@
 FROM python:3.8
 
 # set the working directory in the container
-WORKDIR /code
+WORKDIR /app
 
 # copy the dependencies file to the working directory
 COPY requirements.txt .
+
 
 # install dependencies
 RUN pip3 install -r requirements.txt
 
 # copy the content of the local src directory to the working directory
-COPY src/ .
-
-EXPOSE 5000
+COPY ./src/ /app/src/
 
 # command to run on container start
-CMD [ "python", "core.py" ]
+CMD [ "python3", "src/core.py" ]
