--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -19,6 +19,7 @@ python-dotenv==0.15.0
 python-telegram-bot==13.1
 python-twitter==3.5
 pytz==2020.4
+redis==3.5.3
 requests==2.25.0
 requests-oauthlib==1.3.0
 six==1.15.0
