Conexão backend com Mongo docker compose

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,17 @@
+# set base image (host OS)
 FROM python:3.8
 
-ADD . /code
+# set the working directory in the container
+WORKDIR /backend
 
-WORKDIR /code
+# copy the dependencies file to the working directory
+COPY requirements.txt .
 
-RUN pip install -r requirements.txt
+# install dependencies
+RUN pip3 install -r requirements.txt
 
-CMD python app.py
+# copy the content of the local src directory to the working directory
+COPY ./src/ /backend/src/
+
+# command to run on container start
+CMD [ "python3", "src/core.py" ]
