--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,38 @@
 version: '3.7'
 
 services:
-  # backend:
-  #     build: backend
-  #     ports:
-  #         - "5000:5000"
-  #     depends_on:
-  #         - redis
+  database:
+      image: mongo
+      
+      restart: always
+
+      container_name: "mongo-container"
+      
+      ports: 
+        - '27017:27017'
+
+      networks:
+          - backend_network
   
-  # redis:
-  #   image: redis
+  backend:
+      build: backend
+
+      networks:
+        - backend_network
+        # - frontend_network 
+      ports: 
+        - '5000:5000'
+      depends_on: 
+        - database
+
+  app:
+    build: app
+
+    networks:
+      - backend_network
+    
+    depends_on: 
+      - database
 
   # web:
   #     build: web
@@ -23,28 +46,6 @@ services:
   #     depends_on: 
   #       - app
 
-  app:
-      build: app
-
-      networks:
-        - backend-network
-        - frontend-network
-      
-      depends_on: 
-        - db
-  db:
-    image: mongo
-    
-    restart: always
-
-    container_name: "mongo-container"
-    
-    ports: 
-      - '27017:27017'
-    
-    networks:
-      - backend-network
-  
-networks:
-  backend-network:
-  frontend-network:
+networks: 
+  backend_network:
+  # frontend_network:
