Finalizaçao Docker Compose com o Fronten web

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
       networks:
         - backend_network
-        # - frontend_network 
+        - frontend_network 
       ports: 
         - '5000:5000'
       depends_on: 
@@ -34,18 +34,18 @@ services:
     depends_on: 
       - database
 
-  # web:
-  #     build: web
+  web:
+      build: web
 
-  #     ports: 
-  #       - "3000:3000"
+      ports: 
+        - "3000:3000"
 
-  #     networks:
-  #       - frontend-network
+      networks:
+        - frontend_network
 
-  #     depends_on: 
-  #       - app
+      depends_on: 
+        - app
 
 networks: 
   backend_network:
-  # frontend_network:
+  frontend_network:
