--- a/web/package.json
+++ b/web/package.json
@@ -15,9 +15,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
-    "react-leaflet": "^3.0.4",
+    "react-leaflet": ">=3.1.0 <3.2.0 || ^3.2.1",
+    "@react-leaflet/core": ">=1.0.0 <1.1.0 || ^1.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.11",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
