--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-leaflet/core": "1.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,15 +13,14 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.0",
     "leaflet": "^1.7.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.1.0",
-    "react-leaflet": ">=3.1.0 <3.2.0 || ^3.2.1",
-    "@react-leaflet/core": ">=1.0.0 <1.1.0 || ^1.1.1",
+    "react-leaflet": "2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.11",
-    "typescript": "^4.0.3",
+    "typescript": "^4.3.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
